# web/api/notifications.ts
@@ -74,17 +74,14 @@ export default (app: Application) => {
    *      summary: Update or create a notification
    *      responses:
    *        200:
-   *          description: Returns the notification id in case a notification was created
+   *          description: Returns the full notification object on success
    *          content:
    *            application/json:
    *              schema:
    *                type: object
    *                properties:
    *                  data:
-   *                    type: object
-   *                    properties:
-   *                      notificationId:
-   *                        type: integer
+   *                    $ref: '#/components/schemas/userNotificationWithId'
    *                required:
    *                  - data
    *
@@ -121,7 +118,7 @@ export default (app: Application) => {
 
     handleValidationErrors,
   ], (req: Request, res: Response) => {
-    const data = matchedData(req, { locations: ['body']}) as UpdateUserNotification;
+    const data = matchedData(req, { locations: ['body']}) as UpdateUserNotification<boolean>;
     data.userId = req.user!.userId;
 
     if (data.notificationId) {
@@ -137,6 +134,33 @@ export default (app: Application) => {
       .catch(err => handleError(err, res));
   });
 
+  /**
+   *  @openapi
+   *  /notifications/override:
+   *    post:
+   *      summary: Updates or creates an override for a notification
+   *      responses:
+   *        200:
+   *          description: Returns the full notification object on success
+   *          content:
+   *            application/json:
+   *              schema:
+   *                type: object
+   *                properties:
+   *                  data:
+   *                    $ref: '#/components/schemas/userNotificationWithId'
+   *                required:
+   *                  - data
+   *
+   *        400:
+   *          $ref: '#/components/responses/validationError'
+   *        401:
+   *          $ref: '#/components/responses/unauthorized'
+   *        403:
+   *          $ref: '#/components/responses/forbidden'
+   *        404:
+   *          $ref: '#/components/responses/notFound'
+   */
   app.post('/api/notifications/override', requiresUser, [
     validateUser(),
     databaseIdValidation(body('notificationId')),
@@ -202,6 +226,29 @@ export default (app: Application) => {
       .catch(err => handleError(err, res));
   });
 
+  /**
+   *  @openapi
+   *  /notifications/notificationFollows:
+   *    get:
+   *      summary: Lists user follows
+   *      responses:
+   *        200:
+   *          description: Returns list of follows
+   *          content:
+   *            application/json:
+   *              schema:
+   *                type: object
+   *                properties:
+   *                  data:
+   *                    type: array
+   *                    items:
+   *                      $ref: '#/components/schemas/notificationFollow'
+   *                required:
+   *                  - data
+   *
+   *        401:
+   *          $ref: '#/components/responses/unauthorized'
+   */
   app.get('/api/notifications/notificationFollows', requiresUser, [
     validateUser(),
     handleValidationErrors,
